<resources>
    <string name="app_name">Farm Admin</string>

    <string name="vege_tab">خضراوات</string>
    <string name="fruits_tab">فواكه</string>
    <string name="offers_tab">عروض</string>
    <string name="is_available">متوفر</string>
    <string name="is_not_available">غير متوفر</string>
    <string name="notification_title">قائمة الأسعار اليومية</string>
    <string name="notification_body">عزيزي العميل: نرجو العلم بأنه قد تم تحديث قائمة الأسعار الخاصة بهذا اليوم</string>
    <string name="notification_daily_description">daily notification</string>
    <string name="toolbar_text">Control Panel</string>
    <string name="contact_us_text">للتواصل معنا و حجز الأوردرات</string>
    <string name="mobile_number">01020026392</string>
    <string name="farm_address">25 تقسيم الطرابيشي - متفرع من محمود رشوان - أمام مكتبة الفاروق - الدور الأرضي شقة (1)</string>
    <string name="no_offers_text">لا توجد عروض متاحة حالياً</string>
    <string name="currency_unit"> EGP</string>
    <string name="ticker_string">Farm</string>
    <string name="menu_add">إضافة/تعديل صلاحيات</string>
    <string name="menu_logout">خروج</string>
    <string name="phone_txt">ادخل رقم الموبايل</string>
    <string name="verification_txt">الرمز التأكيدي</string>
    <string name="incomplete_number">Incomplete Number</string>
    <string name="not_auth">Not Authorized!</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="logging_out">Logging out</string>
    <string name="ok_option">تم</string>
    <string name="cancel_option">الغاء</string>
    <string name="spinner_available">متوفر</string>
    <string name="spinner_not_available">غير متوفر</string>
    <string name="check_num">تأكد من صحة الرقم</string>
    <string name="no_price">لم يتم ادخال سعر</string>
    <string name="upload_success">تم رفع الصورة بنجاح!</string>
    <string name="upload_progress">جاري رفع الصورة..</string>
    <string name="check_connection">الشبكة غير متصلة. حاول مرة أخرى</string>
    <string name="admin_username">اسم صاحب الحساب:</string>
    <string name="card_mobile_text">رقم الموبايل:</string>
    <string name="card_priv_text">نوع الصلاحيات:</string>
    <string name="card_status_text">حالة الحساب:</string>
    <string name="admin_management_title">Admin Control</string>
    <string name="admin_text">أدمن</string>
    <string name="content_manager_text">مدير محتوى</string>
    <string name="active_text">نشط</string>
    <string name="inactive_text">غير نشط</string>
    <string name="add_priv">اضافة صلاحيات</string>
    <string name="priv_name">اسم صاحب الحساب</string>
    <string name="admin_phone_error">رقم غير صحيح</string>
    <string name="admin_name_error">لا يمكن ترك خانة الاسم فارغة</string>
    <string name="admin_phone">رقم الهاتف</string>
    <string name="no_admin_text">حسابك لا يمتلك صلاحيات الدخول هنا</string>
    <string name="priv_changed">تم تغيير إعدادات حسابك من قبل الأدمن</string>
    <string name="login_btn_text">دخول</string>
    <string name="are_you_sure">هل تريد حذف العضو؟</string>
    <string name="yes_sure">نعم</string>
    <string name="no_sure">لا</string>
    <string name="remove_offer">هل تريد حذف العرض</string>
    <string name="notification_send">ارسال</string>
    <string name="notification_body_hint">محتوى التنبيه ...</string>
    <string name="notification_title_hint">عنوان التنبيه</string>
    <string name="empty_notification">لا يمكن ترك أي من الحقول فارغة</string>
    <string name="notification_center">Notification Center</string>
    <string name="notification_sent">تم إرسال التنبيه بنجاح</string>
    <string name="login_dialog_text">جاري تسجيل الدخول..</string>


</resources>
