<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/admin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/add_priv" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_admin_name_layout"
        android:layout_width="200dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <EditText
            android:id="@+id/dialog_admin_name"
            android:layout_width="200dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/password_margin_top"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/priv_name"
            android:inputType="textPersonName"
            android:padding="@dimen/drawable_padding"
            android:textColorHint="@color/darkerGray" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_admin_mobile_layout"
        android:layout_width="150dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:gravity="center">

        <EditText
            android:id="@+id/dialog_admin_mobile"
            android:layout_width="150dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/admin_phone"
            android:inputType="phone"
            android:padding="@dimen/drawable_padding"
            android:textColorHint="@color/darkerGray" />
    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/dialog_admin_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/dialog_admin_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:spinnerMode="dropdown" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dialog_admin_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dividingLine_margin_top"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_line"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel_option" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/vertical_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/ok_option" />

    </LinearLayout>


</RelativeLayout>