<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <android.support.v7.widget.CardView
        android:id="@+id/head_card"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        card_view:cardCornerRadius="@dimen/pc_cv_corner_radius"
        card_view:cardElevation="@dimen/elevation"
        card_view:cardMaxElevation="@dimen/elevation">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/card_username_margin_top"
                android:layout_marginRight="8dp"
                android:maxLines="1"
                android:text="@string/admin_username"
                android:textSize="@dimen/card_head_font_size" />

            <TextView
                android:id="@+id/admin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/card_margins"
                android:layout_marginTop="@dimen/card_username_margin_top"
                android:maxLines="1"
                android:text="Bahaa Ibrahim"
                android:textSize="@dimen/card_head_font_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/card_mobile_margin_top"
                android:layout_marginRight="@dimen/card_margins"
                android:maxLines="1"
                android:text="@string/card_mobile_text"
                android:textSize="@dimen/card_head_font_size" />

            <TextView
                android:id="@+id/admin_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/card_margins"
                android:layout_marginTop="@dimen/card_mobile_margin_top"
                android:maxLines="1"
                android:text="01009540399"
                android:textSize="@dimen/card_head_font_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/card_priv_margin_top"
                android:layout_marginRight="@dimen/card_margins"
                android:maxLines="1"
                android:text="@string/card_priv_text"
                android:textSize="@dimen/card_head_font_size" />

            <TextView
                android:id="@+id/admin_privilege"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/card_margins"
                android:layout_marginTop="@dimen/card_priv_margin_top"
                android:maxLines="1"
                android:text="أدمن"
                android:textSize="@dimen/card_head_font_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/card_status_margin_top"
                android:layout_marginRight="@dimen/card_margins"
                android:maxLines="1"
                android:text="@string/card_status_text"
                android:textSize="@dimen/card_head_font_size" />

            <TextView
                android:id="@+id/admin_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/card_margins"
                android:layout_marginTop="@dimen/card_status_margin_top"
                android:maxLines="1"
                android:text="نشط"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/card_head_font_size" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>